--- a/hotel/style.css
+++ b/hotel/style.css
@@ -31,6 +31,30 @@ p {
     overflow: auto;
     padding: 0 20px;
 }
+
+.text-primary {
+    color: #f7c08a;
+}
+
+.lead {
+    font-size: 30px;
+}
+
+.btn {
+    display: inline-block;
+    font-size: 18px;
+    color: #fff;
+    background: #333;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #f7c08a;
+    color: #333;
+}
+
 /* navbar */
 #navbar {
     background: #333;
@@ -66,4 +90,27 @@ p {
 #navbar ul li a.current {
     background: #444;
     color: #f7c08a;
+}
+
+/* Showcase */
+#showcase {
+    background: url('./image_resources/showcase.jpg') no-repeat
+    center center/cover;
+    height: 600px;
+}
+
+#showcase .showcase-content {
+    color: #fff;
+    text-align: center;
+    padding-top: 170px;
+}
+
+#showcase .showcase-content h2 {
+    font-size: 60px;
+    line-height: 1.2em;
+}
+
+#showcase .showcase-content p {
+    padding-bottom: 20px;
+    line-height: 1.7em;
 }
