--- a/hotel/style.css
+++ b/hotel/style.css
@@ -111,7 +111,7 @@ p {
     color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
     float: left;
     padding-top: 20px;
 }
@@ -166,7 +166,7 @@ p {
 
 /* Home Info */
 #home-info {
-    height: 400px;
+    height: 450px;
 }
 
 #home-info .info-img {
@@ -223,7 +223,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-    height: 600px;
+    height: 100%;
     background: url('./image_resources/test-bg.jpg') no-repeat 
     center center/cover;
     padding-top: 100px;
