--- a/ledger/css/style.css
+++ b/ledger/css/style.css
@@ -64,3 +64,48 @@ img {
     border-bottom: #28a745 2px solid;
 
 }
+
+/* Header */
+.hero {
+    background: url('../image_resources/home/showcase.jpg') no-repeat center center/cover;
+    height: 100vh;
+    position: relative;
+    color: #fff;
+}
+
+.hero .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    padding: 0 20px;
+
+}
+
+.hero .content h2 {
+    font-size: 55px;
+    color: #fff;
+
+}
+
+.hero .content p {
+    font-size: 20px;
+    max-width: 600px;
+    margin: 20px 0 30px;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6)
+}
+
+.hero * {
+    z-index: 10;
+}
