--- a/ledger/css/utilities.css
+++ b/ledger/css/utilities.css
@@ -23,22 +23,64 @@
     opacity: 0.9;
 }
 
-.btn-primary {
+.btn-primary, .bg-primary {
     background: #28a745;
     color: #fff;
 }
 
-.btn-secondary {
+.btn-secondary, .bg-secondary {
     background: #0284d0;
     color: #fff;
 }
 
-.btn-dark {
+.btn-dark, .bg-dark {
     background: #333;
     color: #fff;
 }
 
-.btn-light {
+.btn-light, .bg-light {
     background: #f4f4f4;
     color: #333;
+}
+
+.btn-outline {
+    background: transparent;
+    border: 1px solid #fff;
+}
+
+.btn-outline:hover {
+    background: #fff;
+    color: #28a745;
+}
+/* Flex items */
+.flex-items {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.flex-items div {
+    padding: 20px;
+}
+
+/* Flex Columns */
+.flex-columns .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.flex-columns .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+    height: 100%;
+
 }
