--- a/ledger/css/style.css
+++ b/ledger/css/style.css
@@ -35,6 +35,10 @@ img {
     width: 100%;
 }
 
+/* .cases img {
+    max-height: 210px;
+} */
+
 /* Navbar */
 .navbar {
     display: flex;
@@ -132,29 +136,92 @@ img {
 .cases img:hover {
     opacity: 0.7;
 }
-.flex-columns img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+.team img {
+    border-radius: 50%;
 }
 
-.flex-columns .column-2 {
+/* Callback form */
+.callback-form {
+    width: 100%;
+    padding: 20px 0;
+}
+
+.callback-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.callback-form .form-control {
+    margin-bottom: 15px;
+}
+
+.callback-form input {
+    width: 100%;
+    padding: 4px;
+    height: 40px;
+    border: #f5f5f5 1px solid;
+}
+
+.callback-form input:focus {
+    outline-color: #28a745;
+}
+
+.callback-form .btn {
+    padding: 12px 0;
+    margin-top: 20px;
+}
+
+/* footer */
+
+.footer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
-    padding: 30px;
+    text-align: center;
+    height: 200px;
 }
 
-.flex-columns h2 {
-    font-size: 40px;
-    font-weight: 100;
+.footer a {
+    color: #fff;
 }
 
-.flex-column h4 {
-    margin-bottom: 10px;
+.footer a:hover {
+    color: #28a745;
 }
 
-.flex-columns p {
-    margin: 20px 0;
+.footer .social > * {
+    margin-right: 30px;
+
+}
+
+/* Mobile */
+@media(max-width: 768px) {
+
+    .navbar {
+        height: 120px;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .navbar a {
+        padding: 10px 10px;
+        margin: 0 3px;
+    }
+
+    .flex-items {
+        flex-direction: column;
+    }
+
+    .flex-columns .column,
+    .flex-grid .column {
+        flex: 100%;
+        max-width: 100%;
+    }
+
+    .team img {
+        width: 70%;
+    }
+        
 }
