--- a/ledger/css/style.css
+++ b/ledger/css/style.css
@@ -52,6 +52,11 @@ img {
     position: fixed;
     top: 0px;
     padding: 0 30px;
+    transition: 1s ease-in;
+}
+
+.navbar.top {
+    background: transparent;
 }
 
 .navbar a {
