Site finished, favicon not working.

--- a/ledger/css/style.css
+++ b/ledger/css/style.css
@@ -18,7 +18,7 @@ ul {
 }
 
 a {
-    text-color: #333;
+    color: #333;
     text-decoration: none;
 }
 
@@ -52,7 +52,7 @@ img {
     position: fixed;
     top: 0px;
     padding: 0 30px;
-    transition: 1s ease-in;
+    transition: 0.5s;
 }
 
 .navbar.top {
